[package]
name = "tongen"
version = "0.1.0"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2018"

[dependencies]
base64 = "0.12"
clap = "2"
serde_json = "1"
ton-client-rs = { git = 'https://github.com/tonlabs/ton-client-rs.git', tag = "0.24.0" }
ton_client = { git = 'https://github.com/tonlabs/TON-SDK.git', tag = "0" }
ton_sdk = { git = 'https://github.com/tonlabs/TON-SDK.git', tag = "0" }
